--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,16 +5,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>{{ .Site.Title }}</title>
 <meta name="theme-color" content="#2C2E2F" />
-<meta name="keywords" content="Webstack Hugo theme">
-<meta name="description" content="Webstack Hugo theme">
+<meta name="keywords" content="Fomal Haut Hugo 网址 导航">
+<meta name="description" content="Fomal Haut Hugo 常用网址导航">
 <meta property="og:type" content="article">
 <meta property="og:url" content="">
 <meta property="og:title" content="">
 <meta property="og:description" content="">
 <meta property="og:image" content="">
 <meta property="og:site_name" content="">
-<link rel="shortcut icon" href="../assets/favicon.png">
-<link rel="apple-touch-icon" href="../assets/app-ico.png">
+<link rel="shortcut icon" href="../assets/images/favicon.png">
+<link rel="apple-touch-icon" href="../assets/images/app-ico.png">
 <link rel='stylesheet' id='font-awesome-css'  href='../assets/css/font-awesome.min.css?ver=2.0' type='text/css' media='all' />
 <link rel='stylesheet' id='bootstrap-css'  href='../assets/css/bootstrap.css?ver=2.0' type='text/css' media='all' />
 <link rel='stylesheet' id='nav-css'  href='../assets/css/nav.css?ver=2.0' type='text/css' media='all' />
@@ -108,7 +108,7 @@
                 </div>
                 <div class="footer-inner">
                     <div class="footer-text">
-                        Copyright © {{ now.Format "2006"}} <a href=""><strong>{{ if .Site.Copyright }}{{ .Site.Copyright | safeHTML }}{{ else }}iplaycode{{ end }}</strong></a>&nbsp;&nbsp;Design by <a href="http://viggoz.com" target="_blank"><strong>Viggo</strong></a>&nbsp;&nbsp;Themes by <a href="https://github.com/iplaycode" target="_blank"><strong>iplaycode</strong></a>
+                        Copyright © {{ now.Format "2006"}} <a href=""><strong>{{ if .Site.Copyright }}{{ .Site.Copyright | safeHTML }}{{ else }}Fomal Haut{{ end }}</strong></a>
                     </div>
                 </div>
             </footer>
