--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,17 +13,17 @@
 <meta property="og:description" content="">
 <meta property="og:image" content="">
 <meta property="og:site_name" content="">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="apple-mobile-web-app-title" content="八荒山人导航">
-<meta name="application-name" content="八荒山人导航">
+<meta name="apple-mobile-web-app-title" content="Fomal Haut导航">
+<meta name="application-name" content="Fomal Haut导航">
 <meta name="msapplication-TileColor" content="#93b5cf">
 <meta name="theme-color" content="#ffffff">
-<link rel="shortcut icon" href="./assets/favicon.png">
-<link rel="apple-touch-icon" href="./assets/app-ico.png">
+<link rel="shortcut icon" href="./assets/images/favicon.png">
+<link rel="apple-touch-icon" href="./assets/images/app-ico.png">
 <link rel='stylesheet' id='font-awesome-css'  href='./assets/css/font-awesome.min.css?ver=2.0' type='text/css' media='all' />
 <link rel='stylesheet' id='bootstrap-css'  href='./assets/css/bootstrap.css?ver=2.0' type='text/css' media='all' />
 <link rel='stylesheet' id='nav-css'  href='./assets/css/nav.css?ver=2.0' type='text/css' media='all' />
@@ -117,7 +117,7 @@
                     <a href="javascript:" target="" class="xe-widget xe-conversations box2 label-info" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<img src='{{ .qrcode }}' width='128'>">
                         <div class="xe-comment-entry">
                             <div class="xe-user-img">
-                                <img class="img-circle lazy" src="./assets/images/favicon.png" data-src="{{ .logo }}" onerror="javascript:this.src='./assets/images/favicon.png'" width="40">
+                                <img class="img-circle lazy" src="./assets/images/fomal-stories.png" data-src="{{ .logo }}" onerror="javascript:this.src='./assets/images/fomal-stories.png'" width="40">
                             </div>
                             <div class="xe-comment">
                                 <div class="xe-user-name overflowClip_1">
@@ -133,7 +133,7 @@
                     <a href="{{ .url }}" target="_blank" class="xe-widget xe-conversations box2 label-info" data-toggle="tooltip" data-placement="bottom"  title="{{ .url }}">
                         <div class="xe-comment-entry">
                             <div class="xe-user-img">
-                                <img class="img-circle lazy" src="./assets/images/favicon.png" data-src="{{ .logo }}" onerror="javascript:this.src='./assets/images/favicon.png'" width="40">
+                                <img class="img-circle lazy" src="./assets/images/fomal-stories.png" data-src="{{ .logo }}" onerror="javascript:this.src='./assets/images/fomal-stories.png'" width="40">
                             </div>
                             <div class="xe-comment">
                                 <div class="xe-user-name overflowClip_1">
